[package]
name = "icalls"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.net>"]
edition = "2021"
repository = "https://github.com/jeffa5/icalls"
license = "MIT"
description = "A tool to help with writing ical files"

[dependencies]
lsp-server = "0.7.6"
lsp-types = "0.95.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
regex = "1.10.4"
hex = "0.4.3"
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "2.0.3"
itertools = "0.13.0"
line-index = "0.1.2"
uuid = { version = "1.11.0", features = ["v4"] }
uriparse = "0.6.4"
nom_locate = "4.2.0"
nom = "7.1.3"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
expect-test = "1.5.0"
